exports[`placeholder should properly default to & when not passed a parent 1`] = `
Object {
  "input": Object {
    "&:-moz-placeholder": Object {
      "color": "blue",
    },
    "&:-ms-input-placeholder": Object {
      "color": "blue",
    },
    "&::-moz-placeholder": Object {
      "color": "blue",
    },
    "&::-webkit-input-placeholder": Object {
      "color": "blue",
    },
  },
}
`;

exports[`placeholder should properly pass styles object and parent 1`] = `
Object {
  "input:-moz-placeholder": Object {
    "color": "blue",
  },
  "input:-ms-input-placeholder": Object {
    "color": "blue",
  },
  "input::-moz-placeholder": Object {
    "color": "blue",
  },
  "input::-webkit-input-placeholder": Object {
    "color": "blue",
  },
}
`;

exports[`placeholder should throw a warning when passed more than 2 parameters 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- mixins/placeholder.js --%c

placeholder %cwill be deprecated as of version 3.0 of ✨ polished. You should use the ::placeholder pseudo-element instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#placeholder%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ WARNING ✨ ---- mixins/placeholder.js --%c

placeholder %cexpects a maximum of 2 parameters. However, you passed 3 parameters. These additional parameters were ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#placeholder%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`placeholder should throw an error when not passed any parameters 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/placeholder.js --%c

placeholder %cexpects a minimum of 1 parameter. However, you only passed 0 parameters.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#placeholder%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`placeholder should throw an error when passed a non-object as its first parameter 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/placeholder.js --%c

placeholder %cexpects a 1st parameter of type object. However, you passed styles(string) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#placeholder%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`placeholder should throw an error when passed a non-string as its second parameter 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/placeholder.js --%c

placeholder %cexpects a 2nd parameter of type string. However, you passed 1(number) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#placeholder%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;
